k8s/discourse.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: discourse
  namespace: default
spec:
  containers:
  - name: discourse
    image: haiku/discuss
    volumeMounts:
    - name: discourse-shared
      mountPath: /shared
  volumes:
  - name: discourse-shared
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: discourse
  namespace: default
spec:
  selector:
    k8s-app: discourse-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: discourse
  namespace: default
spec:
  rules:
  - host: discuss.haiku-os.org
    http:
      paths:
      - path: /
        backend:
          serviceName: discourse
          servicePort: web
