k8s/git.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-deployment
  namespace: default
  labels:
    app: git
spec:
  replicas: 2
  selector:
    matchLabels:
      app: git
  template:
    metadata:
      labels:
        app: git
    spec:
      containers:
      - name: gerrit
        image: haiku/gerrit:2.16
        volumeMounts:
        - name: gerrit-data
          mountPath: /var/gerrit/review_site
      - name: cgit
        image: haiku/cgit
        volumeMounts:
        - name: gerrit-data
          mountPath: /var/git
      volumes:
      - name: gerrit-data
        persistentVolumeClaim:
          claimName: gerrit-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cgit
  namespace: default
spec:
  selector:
    app: git
  ports:
  - name: web
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: review
  namespace: default
spec:
  selector:
    app: git
  ports:
  - name: web
    port: 80
    targetPort: 8080
  - name: git
    port: 22
    targetPort: 29418
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: git
  namespace: default
spec:
  rules:
  - host: cgit.haiku-os.org
    http:
      paths:
      - path: /
        backend:
          serviceName: cgit
          servicePort: web
  - host: review.haiku-os.org
    http:
      paths:
      - path: /
        backend:
          serviceName: review 
          servicePort: web
